--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     "two three three five"
     ". six six six";
   grid-template-columns: 1fr 2fr 1fr 1fr;
-  grid-template-rows: 120px 1fr 1fr 120px;
+  grid-template-rows: auto 1fr 1fr auto;
   gap: 3px;
   min-height: 100vh;
   width: 100%;
@@ -124,4 +124,5 @@ p { margin-bottom: 3px; }
 ul, ol { padding-left: 15px; margin: 5px 0; }
 table { border-collapse: collapse; width: 100%; }
 th, td { border: 1px solid black; padding: 2px; text-align: left; }
+
 
