--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   grid-template-columns: 1fr 2fr 1fr 1fr;
   grid-template-rows: 120px 1fr 1fr 120px;
   gap: 3px;
+  min-height: 100vh;
   width: 100%;
   min-width: 320px;
   font-size: 10px;
@@ -123,6 +124,7 @@ p { margin-bottom: 3px; }
 ul, ol { padding-left: 15px; margin: 5px 0; }
 table { border-collapse: collapse; width: 100%; }
 th, td { border: 1px solid black; padding: 2px; text-align: left; }
+
 
 
 
