--- a/style.css
+++ b/style.css
@@ -12,13 +12,12 @@ body {
     "two three three five"
     ". six six six";
   grid-template-columns: 1fr 2fr 1fr 1fr;
-  grid-template-rows: 120px 1fr 1fr 120px;
+  grid-template-rows: minmax(120px, auto) 1fr 1fr minmax(120px, auto);
   gap: 3px;
   min-height: 100vh;
   width: 100%;
   min-width: 320px;
   font-size: 10px;
-  overflow: hidden;
 }
 
 .header {
@@ -97,11 +96,11 @@ body {
   border: 1px solid black;
   font-weight: bold;
   font-size: 20px;
-  margin: 0; 
+  margin: 0;
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1; 
+  z-index: 1;
 }
 
 .six h1 {
